client/styles/style.css
body {
	background-color: #E3F4B2;
}

.page-title {
	font-family: 'Rock Salt', cursive;
	font-size: 80px;
	text-align: center;
}

.recipy-title {
	font-family: 'Rock Salt', cursive;
}

.tag-list { 
	font-family: 'Rock Salt', cursive;
	color: #000;
}

i {
	margin-right: 5px;
}

#iron-router-progress {
  background-color: #86FBFF;
  box-shadow: 0 0 5px gray;
}

.navbar {
   background-color: transparent;
   background: transparent;
   border-color: transparent;
}

.well {
   background-color: rgba(245, 245, 245, 0.4);
}
.navbar li { color: #000 } 
.container{
	margin-left: 20px;
	margin-right: 20px;
}

.displayComment {
	margin-top: 10px;
}

.ingrediences {
	margin-top: 10px;
}

.description {
	margin-top: 10px;
}

.tag-display {
	margin-top: 10px;
	font-style: italic;
	font-size: 80%;
}

.recipyBy {
	margin-top: 10px;
	font-style: oblique;
	font-size: 110;
	font-weight: bold;
}

.addRecipyForm {
	margin-right: 20px;
	margin-left: 20px;
}

.pre {
  white-space: pre;
	word-wrap: natural;
	word-break: natural;
}

.footer a {
	margin-left: 30px;
	margin-right: 30px;
	color: gray;
}

.btn {
	margin-top: 20px;
}

.reverse {
  unicode-bidi: bidi-override;
  direction: rtl;
 }

 .details {
 		display: none;
 }

